article image squish fix

--- a/TheDailyWtf/Content/Css/main.less
+++ b/TheDailyWtf/Content/Css/main.less
@@ -186,14 +186,12 @@ a:hover {
 
 
                         p {
-                            img {
-                                text-align: right;
-                                max-height: 250px;
-                            }
+                           
+                         
 
                             a {
                                 img {
-                                    width: 75%;
+                                   
                                     display: block;
                                     margin: 0 auto;
                                     max-height: none;
